-------------------------
- ClientBase/Client/NonSaslAuth: made re-connect-safe
- MessageEventFilter: fixed sending of MessageEventCancel
- MessageEventFilter: fixed handling of IDs
- ChatStateFilter: fixed hypothetical revival of chat states
- Connection: fixed timeout conversion
- Connection: fixed 'valid from' and 'valid to' with gnutls
- compile fix for gcc 4.3 (thanks to Martin Michlmayr)


v0.8.7 -- 06 Mar 2007
-------------------------
- ClientBase: allow cancellation of ID tracking
- VCardManager: allow cancellation of VCard operations
- ClientBase: ugly fix to avoid onDisconnect() being called twice


v0.8.6 -- 14 Dec 2006
-------------------------
- Tag: proper escaping of names/attributes/cdata (thanks to Polycom)
- VCardManager: call handleVCard if VCard is empty
- ClientBase: some disconnect fixes (thanks to Polycom)
- Adhoc: de-registrataion of commands


v0.8.5 -- 10 Nov 2006
---------------------
- RosterManager: keep Roster up-to-date even if no RosterListener is registered
- ClientBase: only log stanzas if actually sent
- ClientBase: more correct return value on disconnect


v0.8.4 -- 18 Sep 2006
---------------------
- compile fix for Mac OS X (thanks to Geoff Schmidt)


v0.8.3 -- 14 Sep 2006
---------------------
- ClientBase: added whitespace ping()
- VCard: fixed typo (vcard --> vCard)


v0.8.2 -- 11 Sep 2006
---------------------
- find dn_skipname on Mac OS X (thanks to Geoff Schmidt)
- look for libgnutls-config in specified path, if given
- fixed compilation on SkyOS
- maybe-fixed resolver on HPUX
- **experimental** native TLS support on win32


v0.8.1 -- 28 Jul 2006
---------------------
- async inbandbytestreams ack
- fixed memory leak in RosterItem
- RosterManager: don't sync self contact to server
- PrivacyManager: give a privacy list a proper name (thanks to Chris Bond)
- InBandBytestreams: ack closing with correct ID
- DataForm: fixed few minor field handling bugs
- Client: allow lazy username provisioning


v0.8 -- 08 Apr 2006